# indi-dustcapino

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  byggfel.txt  connecttext.txt  dustcapino för 2_2_indi.cpp  dustcapino.cpp  dustcapino.h  dustcapino.ino  indi_dustcapino_restore_2026-02-27.txt  nästan_CMakeLists.txt  nästan_dustcapino.cpp  servooutput.txt
A med watchdog/: dustcapino.cpp  dustcapino.h
B watchdog och polling/: dustcapino.cpp  dustcapino.h
C auto usb och config/: dustcapino.cpp  dustcapino.h
D stabil statemaskin/: dustcapino.cpp  dustcapino.h
E UI synkat/: dustcapino.cpp  dustcapino.h  dustcapino.ino
Full funktion v1_4/: dustcapino.cpp  dustcapino.h
docs/: dustcapino_restore_point_2026-03-09.txt
driver/: dustcapino.cpp  dustcapino.h
dustcapino/: dustcapino.ino
